--- a/TestCalendar/Test Calendar/Setting.storyboard
+++ b/TestCalendar/Test Calendar/Setting.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -48,9 +49,8 @@
                                     <constraint firstItem="eAJ-wb-fFp" firstAttribute="centerX" secondItem="AkY-20-mRZ" secondAttribute="centerX" id="xJc-WP-8XK"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="obh-GQ-JF3">
-                                <rect key="frame" x="14" y="135" width="347" height="532"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="obh-GQ-JF3">
+                                <rect key="frame" x="14" y="106.5" width="347" height="560.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="D3N-up-bY7">
@@ -60,14 +60,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="347" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Morning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVj-De-5aI">
-                                                    <rect key="frame" x="29" y="14" width="64" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Morning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVj-De-5aI">
+                                                    <rect key="frame" x="29" y="10" width="64" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="9GV-eP-6mc"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="IVj-De-5aI" firstAttribute="leading" secondItem="ZDD-c5-jNU" secondAttribute="leadingMargin" constant="21" id="WVf-T6-px5"/>
+                                                <constraint firstItem="IVj-De-5aI" firstAttribute="centerY" secondItem="ZDD-c5-jNU" secondAttribute="centerY" id="oVg-fP-Lwb"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="148" id="PcF-iG-dkr">
@@ -89,22 +95,22 @@
                                                 </datePicker>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="zpN-Yt-ESD" firstAttribute="centerY" secondItem="Rf8-kd-Aqq" secondAttribute="centerY" id="aKM-gI-UZO"/>
-                                                <constraint firstItem="zpN-Yt-ESD" firstAttribute="centerX" secondItem="Rf8-kd-Aqq" secondAttribute="centerX" id="xgD-dU-rgd"/>
+                                                <constraint firstItem="zpN-Yt-ESD" firstAttribute="centerX" secondItem="Rf8-kd-Aqq" secondAttribute="centerX" id="dLT-lx-zhh"/>
+                                                <constraint firstItem="zpN-Yt-ESD" firstAttribute="centerY" secondItem="Rf8-kd-Aqq" secondAttribute="centerY" id="wLz-U9-1Y1"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="qdv-t9-Pcw" id="Glv-eE-Cbe"/>
-                                    <outlet property="delegate" destination="qdv-t9-Pcw" id="ZwM-Us-UGR"/>
-                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="AkY-20-mRZ" secondAttribute="trailing" id="9kM-Jv-INe"/>
+                            <constraint firstItem="obh-GQ-JF3" firstAttribute="centerX" secondItem="bDw-Nv-f9m" secondAttribute="centerX" id="E19-Xx-uIh"/>
+                            <constraint firstItem="obh-GQ-JF3" firstAttribute="width" secondItem="bDw-Nv-f9m" secondAttribute="width" multiplier="0.925" id="QwC-RF-ppu"/>
+                            <constraint firstItem="obh-GQ-JF3" firstAttribute="height" secondItem="bDw-Nv-f9m" secondAttribute="height" multiplier="0.84" id="Ueq-P1-Pap"/>
                             <constraint firstItem="AkY-20-mRZ" firstAttribute="top" secondItem="mpz-u1-wYa" secondAttribute="bottom" id="XTZ-o8-xnP"/>
+                            <constraint firstAttribute="bottom" secondItem="obh-GQ-JF3" secondAttribute="bottom" id="cWT-9J-XMf"/>
                             <constraint firstItem="AkY-20-mRZ" firstAttribute="leading" secondItem="bDw-Nv-f9m" secondAttribute="leading" id="tBF-Ie-d32"/>
                         </constraints>
                     </view>
